--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,7 +1,7 @@
 .footer {
     background-color: #2D2B2F;
     position: relative;
-    margin-top: 110px;
+    /* margin-top: 110px; */
 }
 .footer-container {
     width: 75%;
