--- a/src/components/Header/Cap/HeaderMenu/HeaderMenu.css
+++ b/src/components/Header/Cap/HeaderMenu/HeaderMenu.css
@@ -3,12 +3,17 @@
     width: 100%;
     background-color: #292929;
     display: flex;
+    height: 70px;
 }
 .menu-container {
     width: 75%;
     margin: auto;
     padding: 5px 5px;
     display: flex;
+}
+.li {
+    text-decoration: none;
+    list-style-type: none;
 }
 .menu-item {
     font-family: Roboto-Thin;
