--- a/src/components/TrainSelection/LeftSection/TripSetup/Direction/Direction.css
+++ b/src/components/TrainSelection/LeftSection/TripSetup/Direction/Direction.css
@@ -7,8 +7,9 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    align-self: center;
-    height: 80px;
+    height: 40px;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 .img-direction-first {
     background-image: url('/src/images/Subtract.png');
@@ -29,6 +30,8 @@
     font-weight: 700;
     font-size: 1.65rem;
     color: white;
+    height: 20px;
+    margin-bottom: 40px;
 }
 .icon-direction {
     width: 20px;
