--- a/src/components/TrainSelection/ProgressOrder/ProgressOrder.css
+++ b/src/components/TrainSelection/ProgressOrder/ProgressOrder.css
@@ -1,8 +1,8 @@
-.progress-order {
-    margin: -105px auto; 
+/* .progress-order {
+    margin: -130px auto; 
     background-color: white;
     height: 55px;
-}
+} */
 .progress-hidden {
     display: none;
 }
@@ -12,6 +12,7 @@
     position: absolute;
     background-color: white;
     width: 100%;
+    margin-top: -222px;
 }
 
 .paragraph {
@@ -24,10 +25,10 @@
     padding-left: 5px;
 }
 .paragraph:first-child {
-    padding-left: 11.5%;
+    padding-left: 12.5%;
 }
 .paragraph:last-child {
-    padding-right: 11.5%;
+    padding-right: 5%;
 }
 .paragraph:nth-child(n+2) {
     padding-left: 10px;
