--- a/src/components/TrainSelection/RightSection/RightSections.css
+++ b/src/components/TrainSelection/RightSection/RightSections.css
@@ -1,7 +1,6 @@
 .right-section {
     width: 72%;
     margin-top: 50px;
-    padding-bottom: 100px;
 }
 .sort-result-container {
     height: 20px;
@@ -10,6 +9,7 @@
     font-size: 1.125rem;
     display: flex;
     justify-content: space-between;
+    border: 1ps o;
 }
 .sort-selection {
     display: flex;
@@ -62,6 +62,7 @@
 }
 .panel-ticket-page {
     position: absolute;
+    content: '';
     margin-top: 80px;
     height: 75px;
     right: 10px;
