--- a/src/components/TrainSelection/SelectSeats/SelectSeats.css
+++ b/src/components/TrainSelection/SelectSeats/SelectSeats.css
@@ -40,18 +40,25 @@
 }
 .select-seats-information {
     background-color: #f7f6f6;
-    padding: 0 35px;
     display: flex;
     justify-content: space-between;
-    height: 190px;
+    /* padding: 40px 35px; */
+    align-items: center;
+    height: 150px;
 }
 
 .seat-first-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 17%;
+    width: 25%;
     height: 100%;
+    padding-left: 35px;
+    border-right: 2px solid white;
+}
+.first-seats-flex {
+    width: 100%;
+    margin-left: -15%;
 }
 .select-seats-border {
     position: relative;
@@ -73,6 +80,7 @@
 }
 .seats-flex-container {
     margin-left: 10%;
+    width: 60%;
 }
 .seats-train-name {
     font-family: Roboto-Bold;
@@ -80,11 +88,16 @@
     font-size: 1.5rem;
     text-transform: uppercase;
     color: #3E3C41;
+    white-space: nowrap;
+    margin-bottom: 10px;
 }
 .seats-line-city-container {
     display: flex;
     align-items: center;
     width: 100px;
+    white-space: nowrap;
+    text-transform: capitalize;
+    font-family: Roboto;
 }
 .seats-arrow-train {
     margin-left: 12px;
@@ -105,16 +118,26 @@
     left: 0;
     top: 0;
 }
-.seat-second-container {
-    width: 60%;
+/* .seat-second-container {
+    width: 50%;
     height: 100%;
     border-left: 1px solid white;
     border-right: 1px solid white;
     display: flex;
     justify-content: space-between;
-}
+    border: 2px solid white;
+} */
 .seat-new-card-container {
     display: flex;
+}
+.new-card-select {
+    width: 48%;
+    height: 87%;
+    display: flex;
+    margin-top: 5%;
+    padding-left: 2%;
+    justify-content: space-between;
+    border-right: 2px solid white;
 }
 .seat-third-container {
     width: 20%;
@@ -122,7 +145,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-left: 5%;
+    margin-left: 20px;
 }
 .seats-third-vector {
     position: absolute;
@@ -150,12 +173,10 @@
     flex-direction: column;
     margin-left: 150%;
     margin-top: -5px;
-    width: 150px;
-}
-.seats-third-vector-time p {
-    white-space: no-wrap;
+    /* width: 150px; */
     font-family: Roboto;
     font-size: 1.125rem;
+    /* white-space: unset; */
 }
 .select-main {
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
