--- a/src/components/TrainSelection/SelectSeats/TypeWagonsContainer/TypeWagonsContainer.css
+++ b/src/components/TrainSelection/SelectSeats/TypeWagonsContainer/TypeWagonsContainer.css
@@ -1,7 +1,15 @@
 .general-type-wagons {
     background: white;
+    margin-bottom: 30px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
+.tickets-type-wagons-container {
 
+    display: flex;
+    justify-content: space-between;
+    
+}
 h4 {
     padding-top: 50px;
     padding-bottom: 20px;
