--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&subset=cyrillic-ext');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed&subset=cyrillic-ext');
 * {
   padding: 0;
   margin: 0;
@@ -9,23 +11,5 @@ body {
   min-width: 1920px;
   background-color: #e5e5e5;
   user-select: none;
-}
-@font-face {
-  font-family: 'Roboto';
-  src: url(../src/fonts/Roboto-Regular.ttf);
-}
-
-@font-face {
-  font-family: 'Roboto-Light';
-  src: url(../src/fonts/Roboto-Light.ttf);
-}
-
-@font-face {
-  font-family: 'Roboto-Thin';
-  src: url(../src/fonts/Roboto-Thin.ttf);
-}
-
-@font-face {
-  font-family: 'Roboto-Bold';
-  src: url(../src/fonts/Roboto-Bold.ttf);
+  font-family: Roboto;
 }
