--- a/src/components/Header/Cap/HeaderBottom/Bottom/HeaderForm/Calendar/Calendar.css
+++ b/src/components/Header/Cap/HeaderBottom/Bottom/HeaderForm/Calendar/Calendar.css
@@ -20,7 +20,6 @@
     background-color: white;
     border: none;
     outline: none;
-    font-family: Roboto-Light;
     font-size: 20px;
 }
 .react-calendar__navigation__next-button,
@@ -34,7 +33,6 @@
     padding: 3px;
     background-color: white;
     border: none;
-    font-family: Roboto;
 }
 .react-calendar__tile:hover {
     color: #FFA800;
@@ -46,23 +44,29 @@
     background-color: #f8ce7a;
 }
 .date-inputs {
-    width: 120%;
+    width: 100%;
     display: flex;
     justify-content: space-between;
-    margin-top: 30px;
+    justify-content: space-between;
+    margin-top: 17px;
 }
 .data {
     position: relative;
     width: 45%;
+    height: 60px;
     padding: 0;
 }
 .form-input-date {
-    width: 93%;
-    height: 41px;
-    font-family: Roboto;
+    width: 90%;
+    height: 100%;
     font-size: 1.125rem;
     padding-left: 7px;
     padding-right: 10px;
+    padding-left: 20px;
+    border-radius: 5px;
+}
+.form-input-date:focus {
+    outline: 2px solid orange;
 }
 .form-input-date::-webkit-calendar-picker-indicator {
     opacity: 0;
@@ -71,12 +75,13 @@
     position: absolute;
     content: '';
     width: 30px;
-    height: 35px;
+    height: 33px;
     top: 2px;
     left: 85%;
     background-image: url('/src/images/Vector\ \(1\).png');
     background-repeat: no-repeat;
-    margin-top: 3px;
+    margin-top: 10px;
+    padding-right: 14px;
 }
 .hidden-data{
     display: none;
