--- a/src/components/Header/Cap/HeaderBottom/Bottom/HeaderForm/HeaderForm.css
+++ b/src/components/Header/Cap/HeaderBottom/Bottom/HeaderForm/HeaderForm.css
@@ -1,6 +1,6 @@
 .bottom-form-container {
-    width: 48%;
-    height: 482px;
+    width: 50%;
+    height: 500px;
     position: relative;
 }
 .bottom-form-container::before {
@@ -12,17 +12,17 @@
     height: 100%;
 }
 .bottom-form {
-    padding: 0px 15px;
     position: absolute;
-    width: 92%;
+    content: '';
+    width: 93%;
+    margin-left: 3%;
 }
 .form-direction {
-    font-family: Roboto-Light;
+    height: 10px;
     font-size: 1.875rem;
     color: white;
     padding-left: 5px;
-    margin-bottom: 30px;
-    height: 40px;
+    font-weight: 300;
 }
 .input-container {
     display: flex;
@@ -32,32 +32,38 @@
 }
 .city-inputs {
     width: 45%;
-    height: 35px;
+    height: 60px;
     position: relative;
+    display: flex;
+    align-items: center;
+    align-self: center;
 }
-
 .form-input {
     padding-left: 7px;
-    font-family: Roboto;
     font-size: 1.125rem;
     width: 97%;
-    height: 40px;
+    height: 100%;
+    padding-left: 20px;
+    border-radius: 5px;
+}
+.form-input:focus {
+    outline: 2px solid orange;
 }
 .vector-city {
     position: absolute;
-    width: 30px;
-    height: 35px;
+    width: 20px;
+    height: 30px;
     right: 3px;
     top: 5px;
     background-image: url('/src/images/Vector.png');
     background-repeat: no-repeat;
-    margin-top: 3px;
+    padding-right: 17px;
+    margin-top: 10px;
 }
 .search-data {
-    margin-top: -35px;
+    margin-top: -28px;
     display: flex;
     justify-content: space-between;
-    height: 200px;
 }
 .search-blocks {
     height: 45px;
@@ -68,12 +74,13 @@
 .search-button {
     position: absolute;
     content: '';
-    top: 80%;
-    right: 6%;
-    width: 34%;
-    padding: 10px 25px;
+    top: 78%;
+    right: 4%;
+    width: 41.5%;
+    height: 60px;
+    padding: 0 25px;
     background-color: #FFA800;
-    font-family: Roboto-Bold;
+    font-weight: 800;
     font-size: 1.25rem;
     white-space: nowrap;
     border: none;
@@ -95,9 +102,3 @@
     border: 1px solid rebeccapurple;
     z-index: -1;
 }
-/* .fir {
-    margin-top: 40px;
-}
-.sec {
-    margin-top: 40px;
-} */
