--- a/src/components/TrainSelection/SelectSeats/SelectSeats.css
+++ b/src/components/TrainSelection/SelectSeats/SelectSeats.css
@@ -3,8 +3,7 @@
     margin-top: 50px;
     padding-bottom: 60px;
 }
-.select-seats-container h3 {
-    font-family: Roboto;
+.select-seats-container h3 { 
     font-size: 1.875rem;
     font-weight: 500;
     text-transform: uppercase;
@@ -12,7 +11,6 @@
 .select-seats-contain {
     margin-top: 50px;
     width: 100%;
-    /* box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25); */
     border: 1px solid #c4c4c4;
     position: relative;
 }
@@ -21,28 +19,35 @@
     height: 60px;
     padding: 19px;
     display: flex;
+    align-items: center;
 }
 .select-top-icon {
-    width: 76px;
-    height: 100%;
-    background-image: url('/src/images/Subtract-left.png');
-    background-size: contain;
-}
-.select-top-btn {
     border: 1px solid #292929;
     border-radius: 5px;
     margin-left: 20px;
     background: transparent;
     padding: 10px 15px;
-    font-family: Roboto-Bold;
     font-size: 1.3rem;
     font-weight: 700;
+    padding: 17px 30px;
+}
+.select-top-btn {
+    width: 76px;
+    height: 100%;
+    background-image: url('/src/images/Subtract-right.png');
+    background-size: contain;
+    border: none;
+}
+.back-btn-ticket {
+    transform: rotate(180deg);
+    position: relative;
+
+
 }
 .select-seats-information {
     background-color: #f7f6f6;
     display: flex;
     justify-content: space-between;
-    /* padding: 40px 35px; */
     align-items: center;
     height: 150px;
 }
@@ -83,7 +88,6 @@
     width: 60%;
 }
 .seats-train-name {
-    font-family: Roboto-Bold;
     font-weight: 700;
     font-size: 1.5rem;
     text-transform: uppercase;
@@ -96,8 +100,7 @@
     align-items: center;
     width: 100px;
     white-space: nowrap;
-    text-transform: capitalize;
-    font-family: Roboto;
+    text-transform: capitalize; 
 }
 .seats-arrow-train {
     margin-left: 12px;
@@ -109,7 +112,7 @@
     transform: rotate(135deg);
 }
 .seats-arrow-train::after {
-    content: "";
+    content: '';
     display: block;
     width: 1px;
     height: 15px;
@@ -118,23 +121,14 @@
     left: 0;
     top: 0;
 }
-/* .seat-second-container {
-    width: 50%;
-    height: 100%;
-    border-left: 1px solid white;
-    border-right: 1px solid white;
-    display: flex;
-    justify-content: space-between;
-    border: 2px solid white;
-} */
 .seat-new-card-container {
     display: flex;
 }
 .new-card-select {
     width: 48%;
-    height: 87%;
+    height: 82%;
     display: flex;
-    margin-top: 5%;
+    margin-top: 2.5%;
     padding-left: 2%;
     justify-content: space-between;
     border-right: 2px solid white;
@@ -173,17 +167,14 @@
     flex-direction: column;
     margin-left: 150%;
     margin-top: -5px;
-    /* width: 150px; */
-    font-family: Roboto;
     font-size: 1.125rem;
-    /* white-space: unset; */
 }
 .select-main {
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
 }
 .select-bottom {
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
-    height: 580px;
+    height: 350px;
     background-color: white;
 }
 .button-next-btns {
@@ -192,7 +183,6 @@
     position: absolute;
     content: '';
     right: 7px;
-    font-family: Roboto-Bold;
     font-weight: 700;
     font-size: 1.5rem;
     padding: 15px 70px;
