--- a/src/components/TrainSelection/SelectSeats/TypeWagonsContainer/TypeWagonsContainer.css
+++ b/src/components/TrainSelection/SelectSeats/TypeWagonsContainer/TypeWagonsContainer.css
@@ -1,20 +1,31 @@
 .general-type-wagons {
     background: white;
-    margin-bottom: 30px;
     padding-left: 10px;
     padding-right: 10px;
+    height: 240px;
 }
 .tickets-type-wagons-container {
-
     display: flex;
     justify-content: space-between;
-    
+    margin-left: 3%;
+    margin-right: 7%;
 }
 h4 {
     padding-top: 50px;
     padding-bottom: 20px;
     padding-left: 19px;
-    font-family: Roboto-Bold;
     font-size: 1.5rem;
     font-weight: 700;
+}
+.active-icon-sedentary div {
+    background-image: url('/src/images/sedentary-focus.png');
+} 
+.active-icon-reserved div {
+    background-image: url('/src/images/reserved-focus.png');
+}
+.active-icon-cupe div {
+    background-image: url('/src/images/coupe-focus.png');
+}
+.active-icon-lux div {
+    background-image: url('/src/images/lux-focus.png');
 }
