--- a/src/components/TrainSelection/TrainSelection.css
+++ b/src/components/TrainSelection/TrainSelection.css
@@ -18,7 +18,6 @@
     opacity: 0.8;
 }
 .header-logo {
-    font-family: Roboto-Bold;
     font-size: 2.25rem;
     font-weight: 900;
     color: white;
@@ -28,39 +27,37 @@
 .train-form-container {
     width: 80%;
     margin: 200px auto;
-    /* width: 50%; */
-    /* height: 370px;
-    margin: 140px auto; */
-    /* width: 75%; */
-    /* border: 1px solid red; */
-    /* position: absolute;
-    content: ''; */
-    /* width: 100px; */
-    /* background: rgba(41, 41, 41, 0.8); */
+    display: flex;
+}
 
-}
-.train-form-container::before {
-    /* height: 100px; */
-    /* width: 2000px; */
-    /* position: absolute;
-    content: '';
-    z-index: 1;
-    /* background-color: rgba(41, 41, 41, 0.8);
-    opacity: 0.5; 
-    background: rgba(41, 41, 41, 0.8);
-    z-index: 10; */
-}
 .train-form {
     /* width: 97%; */
-    display: flex;
-    justify-content: space-between;
+    /* display: flex; */
+    /* justify-content: space-between; */
+    /* border: 1px solid yellow; */
+    /* flex-direction: column; */
 }
-.blocks-train {
-    height: 10px;
-    width: 48%;
+.blocks-train-title {
+    width: 40%;
+    position: absolute;
+    content: '';
+    /* : 110px; */
+    
 }
+.blocks-train-title:nth-child(n + 2) {
+    margin-left: 53%;
+}
+/* .blocks-train {
+    /* height: 10px;
+    width: 48%; 
+    border: 1px solid red;
+    width: 200px;
+    
+} */
 .date-inputs-train {
     margin-top: 5px;
+    border: 1px solid orange;
+    width: 10%;
 }
 .main-contain {
     position: relative;
@@ -82,6 +79,7 @@
     background-color: rgb(62, 60, 65);
     width: 100%;
     height: 750px;
+    margin-top: -10px;
     position: relative;
     height: 1000px;
 } 
@@ -92,7 +90,6 @@
 }
 .search-progress-text {
     width: 170px;
-    font-family: Roboto-Bold;
     font-size: 1.5rem;
     font-weight: 700;
     color: #928f94;
@@ -109,5 +106,10 @@
     margin-left: 20%;
     z-index: 10;
     height: 600px;
-    margin-top: 300px;
+    margin-top: 100px;
+}
+.selected-container {
+    display: flex;
+    flex-direction: column;
+    border: 1px solid green;
 }
