--- a/src/components/TrainSelection/SelectSeats/SelectSeats.css
+++ b/src/components/TrainSelection/SelectSeats/SelectSeats.css
@@ -41,8 +41,6 @@
 .back-btn-ticket {
     transform: rotate(180deg);
     position: relative;
-
-
 }
 .select-seats-information {
     background-color: #f7f6f6;
@@ -141,33 +139,16 @@
     align-items: center;
     margin-left: 20px;
 }
-.seats-third-vector {
-    position: absolute;
-    content: '';
-    width: 0;
-    height: 0;
-    border-left: 9px solid transparent;
-    border-right: 9px solid transparent;
-    border-bottom: 9px solid #ffa800;
-    transform: rotate(-135deg);
-    left: 26%;
-    top: 27%;
-}
-.seats-third-vector::before {
-    position: absolute;
-    content: '';
-    border-left: 9px solid transparent;
-    border-right: 9px solid transparent;
-    border-bottom: 9px solid white;
-    margin-left: -9px;
-    margin-top: 3px;
-}
 .seats-third-vector-time {
     display: flex;
     flex-direction: column;
-    margin-left: 150%;
-    margin-top: -5px;
+    margin-left: 5%;
+    margin-top: -37px;
     font-size: 1.125rem;
+    position: absolute;
+    content: '';
+    width: 100px;
+
 }
 .select-main {
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
