--- a/src/components/Header/Cap/HeaderBottom/Bottom/HeaderForm/Calendar/Calendar.css
+++ b/src/components/Header/Cap/HeaderBottom/Bottom/HeaderForm/Calendar/Calendar.css
@@ -2,6 +2,7 @@
     border-radius: 7px;
     background-color: white;
     padding: 3px;
+    width: 100%;
 }
 .react-calendar__navigation {
     height: 20px;
