--- a/src/components/SectionReviews/SectionReviews.css
+++ b/src/components/SectionReviews/SectionReviews.css
@@ -1,7 +1,7 @@
 .translators {
     width: 75%;
     margin: 50px auto 100px;
-    height: 300px;
+    height: 350px;
 }
 .translator-title {
     font-size: 2.25rem;
@@ -56,7 +56,10 @@
 }
 .carousel-dots {
     width: 150px;
-    margin: 25px auto 79px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 80px;
+    height: 20px;
 }
 .dots-container {
     display: flex;
