--- a/src/components/TrainSelection/LeftSection/TripSetup/Direction/Direction.css
+++ b/src/components/TrainSelection/LeftSection/TripSetup/Direction/Direction.css
@@ -2,13 +2,13 @@
     margin-top: 1px;
     background-color: #3e3c41;
     padding: 0px 20px;
+    padding-top: 20px;
 }
 .direction-header {
     display: flex;
     justify-content: flex-start;
     align-items: center;
     height: 40px;
-    padding-top: 20px;
     padding-bottom: 20px;
 }
 .img-direction-first {
@@ -25,21 +25,21 @@
 }
 
 .direction-title {
-    margin-left: -10px;
+    margin-left: 5%;
     font-weight: 700;
     font-size: 1.65rem;
     color: white;
     height: 20px;
-    margin-bottom: 40px;
+    margin-bottom: 10px;
 }
 .icon-direction {
+    margin-left: auto;
+    right: 20px;
     width: 20px;
     height: 20px;
     background-image: url('/src/images/show-up.png');
     background-size: cover;
     background-color: transparent;
-    left: 20%;
-    position: absolute;
     border: none;
 }
 .icon-direction:hover {
