--- a/src/components/TrainSelection/Passengers/Passengers.css
+++ b/src/components/TrainSelection/Passengers/Passengers.css
@@ -32,7 +32,6 @@
     justify-content: space-between;
     color: white;
     padding-bottom: 10px;
-    width: 100%;
 }
 .column-passengers {
     display: flex;
@@ -42,12 +41,16 @@
     white-space: nowrap;
     font-style: 1.125rem;
     color: #E5E5E5;
-    width: 170%;
 }
 .passengers-price {
     font-weight: 700;
     font-size: 1.5rem;
     color: white;
+    position: absolute;
+    left: 12%;
+    width: 10%;
+    text-align: end;
+
 }
 .total-container {
     padding-bottom: 20px;
